💄 Fixed ranking overflow

--- a/frontend/src/pages/user/user_profile/profile/Profile.css
+++ b/frontend/src/pages/user/user_profile/profile/Profile.css
@@ -101,6 +101,7 @@
 
 		padding: 8px;
 		
+		overflow-y: auto;
 		height: 100%;
 		white-space: pre-line;
 		text-align: center;
@@ -122,7 +123,7 @@
 	}
 
 	#stats-values > div {
-		font-size: clamp(0.3rem, 2vw, 0.8rem);
+		font-size: clamp(0.3rem, 1.8vw, 0.8rem);
 	}
 
 	#achievements-card {
